fixed header alignment

--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -8,23 +8,23 @@ body {
     background-color: #d9dcd6;
 }
 
-.header {
+.top {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
     color: #ffffff;
 }
 
-.header h1 {
+.top h1 {
     display: inline-block;
     font-size: 48px;
 }
 
-.header h1 .seo {
+.top h1 .seo {
     color: #d9dcd6;
 }
 
-.header div {
+.top header {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -32,15 +32,15 @@ body {
     font-size: 20px;
 }
 
-.header div ul {
+.top ul {
     list-style-type: none;
     text-align: right;
 }
 
-.header ul li {
+.top ul li {
     display: inline-block;
     margin-left: 25px;
-text-align: right;
+    text-align: right;
 }
 
 a {
@@ -75,7 +75,7 @@ p {
     width: 75%;
     display: inline-block;
     margin-left: 20px;
-    margin-top:800px
+    margin-top: 825px
 }
 
 .benefits {
@@ -90,7 +90,9 @@ p {
 }
 
 /* put the benefit classes into one rule box */
-.benefit-lead,.benefit-brand,.benefit-cost {
+.benefit-lead,
+.benefit-brand,
+.benefit-cost {
     margin-bottom: 32px;
     color: #ffffff;
 }
@@ -98,14 +100,18 @@ p {
 
 
 
-.benefit-lead h3,.benefit-brand h3,.benefit-cost h3 {
+.benefit-lead h3,
+.benefit-brand h3,
+.benefit-cost h3 {
     margin-bottom: 10px;
     text-align: center;
 }
 
 
 
-.benefit-lead img,.benefit-brand img,.benefit-cost img {
+.benefit-lead img,
+.benefit-brand img,
+.benefit-cost img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
@@ -148,6 +154,7 @@ p {
 
 .social-media-marketing img {
     max-height: 200px;
+    ;
 }
 
 .search-engine-optimization h2 {
